--- a/StriveMammoth/test-output/index.html
+++ b/StriveMammoth/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Suite" class="navigator-link ">
-                    <span>C:\Users\mukes\git\StriveMammothProject\StriveMammoth\testng_sanity.xml</span>
+                    <span>C:\Users\mukes\git\StriveMammothProject\StriveMammoth\testng_smoke.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,12 +104,12 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.strivemammoth.testcases.WashPage_TestCases" class="method navigator-link" hash-for-method="AddWash">AddWash</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="com.strivemammoth.testcases.CashRegisterPage_TestCase" class="method navigator-link" hash-for-method="GoToCashRegClose">GoToCashRegClose</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.strivemammoth.testcases.LoginPage_Testcase" class="method navigator-link" hash-for-method="Login">Login</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="com.strivemammoth.testcases.CashRegisterPage_TestCase" class="method navigator-link" hash-for-method="GoToCashRegOpen">GoToCashRegOpen</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -127,29 +127,21 @@
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.strivemammoth.testcases.WashPage_TestCases</span>
+              <span class="class-name">com.strivemammoth.testcases.CashRegisterPage_TestCase</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="AddWash">
-                  </a> <!-- AddWash -->
-                  <span class="method-name">AddWash</span>
+                  <a name="GoToCashRegClose">
+                  </a> <!-- GoToCashRegClose -->
+                  <span class="method-name">GoToCashRegClose</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Suite-class-passed -->
-          <div class="suite-Suite-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">com.strivemammoth.testcases.LoginPage_Testcase</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="Login">
-                  </a> <!-- Login -->
-                  <span class="method-name">Login</span>
+                  <a name="GoToCashRegOpen">
+                  </a> <!-- GoToCashRegOpen -->
+                  <span class="method-name">GoToCashRegOpen</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -157,7 +149,7 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\mukes\git\StriveMammothProject\StriveMammoth\testng_sanity.xml</span>
+            <span class="header-content">C:\Users\mukes\git\StriveMammothProject\StriveMammoth\testng_smoke.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -171,7 +163,7 @@
     &lt;parameter name=&quot;browser&quot; value=&quot;Chrome&quot;/&gt;
     &lt;groups&gt;
       &lt;run&gt;
-        &lt;include name=&quot;Sanity&quot;/&gt;
+        &lt;include name=&quot;Smoke&quot;/&gt;
       &lt;/run&gt;
     &lt;/groups&gt;
     &lt;classes&gt;
@@ -203,14 +195,14 @@
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="test-group">
-              <span class="test-group-name">Sanity</span>
+              <span class="test-group-name">Smoke</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">AddWash</span>
+                <span class="method-in-group-name">GoToCashRegClose</span>
                 <br/>
               </div> <!-- method-in-group -->
               <div class="method-in-group">
-                <span class="method-in-group-name">Login</span>
+                <span class="method-in-group-name">GoToCashRegOpen</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -232,13 +224,13 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'AddWash')
-data.setCell(0, 2, 'com.strivemammoth.testcases.WashPage_TestCases')
-data.setCell(0, 3, 41566);
+data.setCell(0, 1, 'GoToCashRegClose')
+data.setCell(0, 2, 'com.strivemammoth.testcases.CashRegisterPage_TestCase')
+data.setCell(0, 3, 35583);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'Login')
-data.setCell(1, 2, 'com.strivemammoth.testcases.LoginPage_Testcase')
-data.setCell(1, 3, 21965);
+data.setCell(1, 1, 'GoToCashRegOpen')
+data.setCell(1, 2, 'com.strivemammoth.testcases.CashRegisterPage_TestCase')
+data.setCell(1, 3, 33776);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
@@ -262,20 +254,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
-              <span class="ignored-class-name">com.strivemammoth.testcases.CashRegisterPage_TestCase</span>
+              <span class="ignored-class-name">com.strivemammoth.testcases.LoginPage_Testcase</span>
               <div class="ignored-methods-div">
+                <span class="ignored-method-name">Login</span>
+                <br/>
                 <span class="ignored-method-name">endextent</span>
-                <br/>
-                <span class="ignored-method-name">GoToCashRegClose</span>
-                <br/>
-                <span class="ignored-method-name">GoToCashRegOpen</span>
                 <br/>
                 <span class="ignored-method-name">loadConfig</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
             <div class="ignored-class-div">
-              <span class="ignored-class-name">com.strivemammoth.testcases.LoginPage_Testcase</span>
+              <span class="ignored-class-name">com.strivemammoth.testcases.CashRegisterPage_TestCase</span>
               <div class="ignored-methods-div">
                 <span class="ignored-method-name">endextent</span>
                 <br/>
@@ -294,6 +284,13 @@ return data;
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">com.strivemammoth.testcases.WashPage_TestCases</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">AddWash</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Suite" class="panel">
@@ -307,39 +304,39 @@ return data;
                 <span class="method-name">loadConfig</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
-              <div class="configuration-method before">
-                <span class="method-name">setup(Chrome)</span>
-                <span class="method-start">360 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">AddWash</span>
-                <span class="method-start">9943 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">close</span>
-                <span class="method-start">51550 ms</span>
-              </div> <!-- configuration-method after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
-              <div class="chronological-class-name">com.strivemammoth.testcases.LoginPage_Testcase</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.strivemammoth.testcases.CashRegisterPage_TestCase</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">setup(Chrome)</span>
-                <span class="method-start">51795 ms</span>
+                <span class="method-start">226 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">Login</span>
-                <span class="method-start">59853 ms</span>
+                <span class="method-name">GoToCashRegOpen</span>
+                <span class="method-start">15609 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">close</span>
-                <span class="method-start">81822 ms</span>
+                <span class="method-name">teardown</span>
+                <span class="method-start">49420 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setup(Chrome)</span>
+                <span class="method-start">49815 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">GoToCashRegClose</span>
+                <span class="method-start">56677 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">teardown</span>
+                <span class="method-start">92266 ms</span>
               </div> <!-- configuration-method after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.strivemammoth.testcases.WashPage_TestCases</div> <!-- chronological-class-name -->
               <div class="configuration-suite after">
                 <span class="method-name">endextent</span>
-                <span class="method-start">82167 ms</span>
+                <span class="method-start">92549 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
