--- a/StriveMammoth/test-output/old/Suite/methods-not-run.html
+++ b/StriveMammoth/test-output/old/Suite/methods-not-run.html
@@ -1,9 +1,9 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>com.strivemammoth.testcases.LoginPage_Testcase.Login</td></tr>
+<tr><td>com.strivemammoth.testcases.WashPage_TestCases.AddWash</td></tr>
 <tr><td>com.strivemammoth.base.BaseClass.endextent</td></tr>
 <tr><td>com.strivemammoth.base.BaseClass.endextent</td></tr>
 <tr><td>com.strivemammoth.base.BaseClass.endextent</td></tr>
-<tr><td>com.strivemammoth.testcases.CashRegisterPage_TestCase.GoToCashRegClose</td></tr>
-<tr><td>com.strivemammoth.testcases.CashRegisterPage_TestCase.GoToCashRegOpen</td></tr>
 <tr><td>com.strivemammoth.base.BaseClass.loadConfig</td></tr>
 <tr><td>com.strivemammoth.base.BaseClass.loadConfig</td></tr>
 <tr><td>com.strivemammoth.base.BaseClass.loadConfig</td></tr>
