--- a/StriveMammoth/test-output/old/Suite/groups.html
+++ b/StriveMammoth/test-output/old/Suite/groups.html
@@ -1,3 +1,3 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Sanity</td><td>LoginPage_Testcase.Login()[pri:0, instance:com.strivemammoth.testcases.LoginPage_Testcase@4d02f94e]<br/>WashPage_TestCases.AddWash()[pri:0, instance:com.strivemammoth.testcases.WashPage_TestCases@ea6147e]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Smoke</td><td>CashRegisterPage_TestCase.GoToCashRegClose()[pri:2, instance:com.strivemammoth.testcases.CashRegisterPage_TestCase@3059cbc]<br/>CashRegisterPage_TestCase.GoToCashRegOpen()[pri:1, instance:com.strivemammoth.testcases.CashRegisterPage_TestCase@3059cbc]<br/></td></tr>
 </table>
