--- a/StriveMammoth/test-output/old/Suite/classes.html
+++ b/StriveMammoth/test-output/old/Suite/classes.html
@@ -4,20 +4,15 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.strivemammoth.testcases.CashRegisterPage_TestCase</td>
+<td>com.strivemammoth.testcases.LoginPage_Testcase</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>GoToCashRegClose</td>
-<td>Smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>GoToCashRegOpen</td>
-<td>Smoke </td>
+<td>Login</td>
+<td>Sanity </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -35,7 +30,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>teardown</td>
+<td>close</td>
 <td>Sanity Regression Smoke </td>
 </tr>
 <tr>
