--- a/StriveMammoth/test-output/old/Suite/methods.html
+++ b/StriveMammoth/test-output/old/Suite/methods.html
@@ -1,20 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="647d63">  <td>23/01/23 21:40:04</td>   <td>0</td> <td title="&gt;&gt;BaseClass.loadConfig()[pri:0, instance:com.strivemammoth.testcases.WashPage_TestCases@6babf3bf]">&gt;&gt;loadConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@812553708</td>   <td></td> </tr>
-<tr bgcolor="f9b8be">  <td>23/01/23 21:40:04</td>   <td>221</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CashRegisterPage_TestCase.setup(java.lang.String)[pri:0, instance:com.strivemammoth.testcases.CashRegisterPage_TestCase@3059cbc]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@812553708</td>   <td></td> </tr>
-<tr bgcolor="f9b8be">  <td>23/01/23 21:40:19</td>   <td>15604</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CashRegisterPage_TestCase.GoToCashRegOpen()[pri:1, instance:com.strivemammoth.testcases.CashRegisterPage_TestCase@3059cbc]">GoToCashRegOpen</td> 
-  <td>main@812553708</td>   <td></td> </tr>
-<tr bgcolor="f9b8be">  <td>23/01/23 21:40:53</td>   <td>49415</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CashRegisterPage_TestCase.teardown()[pri:0, instance:com.strivemammoth.testcases.CashRegisterPage_TestCase@3059cbc]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@812553708</td>   <td></td> </tr>
-<tr bgcolor="f9b8be">  <td>23/01/23 21:40:53</td>   <td>49811</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CashRegisterPage_TestCase.setup(java.lang.String)[pri:0, instance:com.strivemammoth.testcases.CashRegisterPage_TestCase@3059cbc]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@812553708</td>   <td></td> </tr>
-<tr bgcolor="f9b8be">  <td>23/01/23 21:41:00</td>   <td>56672</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CashRegisterPage_TestCase.GoToCashRegClose()[pri:2, instance:com.strivemammoth.testcases.CashRegisterPage_TestCase@3059cbc]">GoToCashRegClose</td> 
-  <td>main@812553708</td>   <td></td> </tr>
-<tr bgcolor="f9b8be">  <td>23/01/23 21:41:36</td>   <td>92261</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CashRegisterPage_TestCase.teardown()[pri:0, instance:com.strivemammoth.testcases.CashRegisterPage_TestCase@3059cbc]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@812553708</td>   <td></td> </tr>
-<tr bgcolor="647d63">  <td>23/01/23 21:41:36</td>   <td>92544</td> <td title="&lt;&lt;BaseClass.endextent()[pri:0, instance:com.strivemammoth.testcases.WashPage_TestCases@6babf3bf]">&lt;&lt;endextent</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@812553708</td>   <td></td> </tr>
+<tr bgcolor="8e78f2">  <td>23/01/26 13:44:06</td>   <td>0</td> <td title="&gt;&gt;BaseClass.loadConfig()[pri:0, instance:com.strivemammoth.testcases.WashPage_TestCases@73700b80]">&gt;&gt;loadConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1497018177</td>   <td></td> </tr>
+<tr bgcolor="f29890">  <td>23/01/26 13:44:06</td>   <td>229</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPage_Testcase.setup(java.lang.String)[pri:0, instance:com.strivemammoth.testcases.LoginPage_Testcase@49c7b90e]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1497018177</td>   <td></td> </tr>
+<tr bgcolor="f29890">  <td>23/01/26 13:44:15</td>   <td>9188</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage_Testcase.Login()[pri:0, instance:com.strivemammoth.testcases.LoginPage_Testcase@49c7b90e]">Login</td> 
+  <td>main@1497018177</td>   <td></td> </tr>
+<tr bgcolor="f29890">  <td>23/01/26 13:44:37</td>   <td>31032</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPage_Testcase.close()[pri:0, instance:com.strivemammoth.testcases.LoginPage_Testcase@49c7b90e]">&lt;&lt;close</td> 
+<td>&nbsp;</td>  <td>main@1497018177</td>   <td></td> </tr>
+<tr bgcolor="8e78f2">  <td>23/01/26 13:44:38</td>   <td>31330</td> <td title="&lt;&lt;BaseClass.endextent()[pri:0, instance:com.strivemammoth.testcases.WashPage_TestCases@73700b80]">&lt;&lt;endextent</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1497018177</td>   <td></td> </tr>
 </table>
