--- a/StriveMammoth/test-output/old/Suite/classes.html
+++ b/StriveMammoth/test-output/old/Suite/classes.html
@@ -4,6 +4,39 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
+<td>com.strivemammoth.testcases.WashPage_TestCases</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>AddWash</td>
+<td>Sanity </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>setup</td>
+<td>Sanity Regression Smoke </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>close</td>
+<td>Sanity Regression Smoke </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
 <td>com.strivemammoth.testcases.LoginPage_Testcase</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
