--- a/StriveMammoth/test-output/old/Default suite/methods-alphabetical.html
+++ b/StriveMammoth/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="aceffd">  <td>23/01/05 12:06:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WashPage_TestCases.AddWash()[pri:0, instance:com.strivemammoth.testcases.WashPage_TestCases@5f9b2141]">AddWash</td> 
-  <td>main@1628998132</td>   <td></td> </tr>
-<tr bgcolor="aceffd">  <td>23/01/05 12:06:57</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;WashPage_TestCases.close()[pri:0, instance:com.strivemammoth.testcases.WashPage_TestCases@5f9b2141]">&lt;&lt;close</td> 
+<tr bgcolor="708d61">  <td>23/02/02 12:08:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ClientSearch_TestCase.clientsearch()[pri:0, instance:com.strivemammoth.testcases.ClientSearch_TestCase@193f604a]">clientsearch</td> 
+  <td>main@1632413663</td>   <td></td> </tr>
+<tr bgcolor="708d61">  <td>23/02/02 12:08:40</td>   <td>6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ClientSearch_TestCase.close()[pri:0, instance:com.strivemammoth.testcases.ClientSearch_TestCase@193f604a]">&lt;&lt;close</td> 
 <td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="a487af">  <td>23/01/05 12:06:57</td>   <td>56</td> <td title="&lt;&lt;BaseClass.endextent()[pri:0, instance:com.strivemammoth.testcases.WashPage_TestCases@5f9b2141]">&lt;&lt;endextent</td> 
+<tr bgcolor="8edcc5">  <td>23/02/02 12:08:40</td>   <td>68</td> <td title="&lt;&lt;BaseClass.endextent()[pri:0, instance:com.strivemammoth.testcases.ClientSearch_TestCase@193f604a]">&lt;&lt;endextent</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="a487af">  <td>23/01/05 12:06:57</td>   <td>-233</td> <td title="&gt;&gt;BaseClass.loadConfig()[pri:0, instance:com.strivemammoth.testcases.WashPage_TestCases@5f9b2141]">&gt;&gt;loadConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1628998132</td>   <td></td> </tr>
+<tr bgcolor="8edcc5">  <td>23/02/02 12:08:40</td>   <td>-271</td> <td title="&gt;&gt;BaseClass.loadConfig()[pri:0, instance:com.strivemammoth.testcases.ClientSearch_TestCase@193f604a]">&gt;&gt;loadConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1632413663</td>   <td></td> </tr>
 </table>
