--- a/StriveMammoth/test-output/old/Suite/groups.html
+++ b/StriveMammoth/test-output/old/Suite/groups.html
@@ -1,3 +1,1 @@
-<h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Sanity</td><td>LoginPage_Testcase.Login()[pri:0, instance:com.strivemammoth.testcases.LoginPage_Testcase@49c7b90e]<br/>WashPage_TestCases.AddWash()[pri:0, instance:com.strivemammoth.testcases.WashPage_TestCases@73700b80]<br/></td></tr>
-</table>
+<h2>Groups used for this test run</h2>
