--- a/StriveMammoth/test-output/old/Suite/methods.html
+++ b/StriveMammoth/test-output/old/Suite/methods.html
@@ -1,20 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8e78f2">  <td>23/01/26 22:13:58</td>   <td>0</td> <td title="&gt;&gt;BaseClass.loadConfig()[pri:0, instance:com.strivemammoth.testcases.WashPage_TestCases@73700b80]">&gt;&gt;loadConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1497018177</td>   <td></td> </tr>
-<tr bgcolor="867da0">  <td>23/01/26 22:13:58</td>   <td>254</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;WashPage_TestCases.setup(java.lang.String)[pri:0, instance:com.strivemammoth.testcases.WashPage_TestCases@73700b80]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1497018177</td>   <td></td> </tr>
-<tr bgcolor="867da0">  <td>23/01/26 22:14:14</td>   <td>16628</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WashPage_TestCases.AddWash()[pri:0, instance:com.strivemammoth.testcases.WashPage_TestCases@73700b80]">AddWash</td> 
-  <td>main@1497018177</td>   <td></td> </tr>
-<tr bgcolor="867da0">  <td>23/01/26 22:15:27</td>   <td>89599</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;WashPage_TestCases.close()[pri:0, instance:com.strivemammoth.testcases.WashPage_TestCases@73700b80]">&lt;&lt;close</td> 
-<td>&nbsp;</td>  <td>main@1497018177</td>   <td></td> </tr>
-<tr bgcolor="f29890">  <td>23/01/26 22:15:43</td>   <td>105835</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPage_Testcase.setup(java.lang.String)[pri:0, instance:com.strivemammoth.testcases.LoginPage_Testcase@49c7b90e]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1497018177</td>   <td></td> </tr>
-<tr bgcolor="f29890">  <td>23/01/26 22:15:53</td>   <td>115581</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage_Testcase.Login()[pri:0, instance:com.strivemammoth.testcases.LoginPage_Testcase@49c7b90e]">Login</td> 
-  <td>main@1497018177</td>   <td></td> </tr>
-<tr bgcolor="f29890">  <td>23/01/26 22:16:16</td>   <td>138188</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPage_Testcase.close()[pri:0, instance:com.strivemammoth.testcases.LoginPage_Testcase@49c7b90e]">&lt;&lt;close</td> 
-<td>&nbsp;</td>  <td>main@1497018177</td>   <td></td> </tr>
-<tr bgcolor="8e78f2">  <td>23/01/26 22:16:32</td>   <td>154515</td> <td title="&lt;&lt;BaseClass.endextent()[pri:0, instance:com.strivemammoth.testcases.WashPage_TestCases@73700b80]">&lt;&lt;endextent</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1497018177</td>   <td></td> </tr>
+<tr bgcolor="6be399">  <td>23/02/02 12:25:54</td>   <td>0</td> <td title="&gt;&gt;BaseClass.loadConfig()[pri:0, instance:com.strivemammoth.testcases.ClientSearch_TestCase@6bedbc4d]">&gt;&gt;loadConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@503642634</td>   <td></td> </tr>
+<tr bgcolor="99b8e7">  <td>23/02/02 12:25:55</td>   <td>252</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ClientSearch_TestCase.setup(java.lang.String)[pri:0, instance:com.strivemammoth.testcases.ClientSearch_TestCase@6bedbc4d]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@503642634</td>   <td></td> </tr>
+<tr bgcolor="99b8e7">  <td>23/02/02 12:26:03</td>   <td>8206</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ClientSearch_TestCase.clientsearch()[pri:0, instance:com.strivemammoth.testcases.ClientSearch_TestCase@6bedbc4d]">clientsearch</td> 
+  <td>main@503642634</td>   <td></td> </tr>
+<tr bgcolor="99b8e7">  <td>23/02/02 12:26:03</td>   <td>8226</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ClientSearch_TestCase.close()[pri:0, instance:com.strivemammoth.testcases.ClientSearch_TestCase@6bedbc4d]">&lt;&lt;close</td> 
+<td>&nbsp;</td>  <td>main@503642634</td>   <td></td> </tr>
+<tr bgcolor="6be399">  <td>23/02/02 12:26:03</td>   <td>8282</td> <td title="&lt;&lt;BaseClass.endextent()[pri:0, instance:com.strivemammoth.testcases.ClientSearch_TestCase@6bedbc4d]">&lt;&lt;endextent</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@503642634</td>   <td></td> </tr>
 </table>
